# cooltrans

./: .env  .gitignore  Makefile  Pipfile  README.md  cooltrans.dockerfile  cooltrans_server.py  pyproject.toml  twitch.dockerfile  twitch.sh
cooltrans/: multi_get.py  session.py  static_resolver.py
cooltrans/data/: README.md  acquisition.py  cctv.py  ips.py  ndot_cctv.py  streams.py  urls.py
static/: index.html
